update/公開側の店舗詳細画面で、誤って住所の表記を誤っていたので修正

--- a/app/views/admins/shops/show.html.erb
+++ b/app/views/admins/shops/show.html.erb
@@ -20,7 +20,7 @@
           <dt>住所</dt>
           <dd>
             〒<%= @shop.postcode %><br>
-            <%= @shop.address %><%= @shop.prefecture.name %><%= @shop.city_name %>
+            <%= @shop.prefecture.name %><%= @shop.city_name %><%= @shop.address %>
           </dd>
           <dt>営業時間</dt><dd><%=safe_join(@shop.business_time.split("\n"),tag(:br))%></dd>
           <dt>アクセス</dt><dd><%=safe_join(@shop.access.split("\n"),tag(:br))%></dd>
