--- a/app/views/admins/shops/index.html.erb
+++ b/app/views/admins/shops/index.html.erb
@@ -29,7 +29,7 @@
         <th>住所</th>
         <th>電話番号</th>
         <th>グルメサイト</th>
-        <th colspan="2"></th>
+        <th colspan="2"><%= link_to '公開画面へのリンク', shops_path, target: "_blank" %></th>
       </tr>
     </thead>
     <tbody>
