--- a/app/views/admins/articles/show.html.erb
+++ b/app/views/admins/articles/show.html.erb
@@ -5,7 +5,7 @@
     <div class="articleHeaderbox">
       <h1><%= @article.title %></h1>
       <ul>
-        <li class="time">カテゴリー / <span class="<%= category_text_color(@article.category) %>"><%= @article.category_text %></span></li>
+        <li class="time">カテゴリー / <span class="<%= @article.category %>-category"><%= @article.category_text %></span></li>
       </ul>
     </div>
     <div class="mb-4">
@@ -20,7 +20,7 @@
           <% if content.article_image.present? %>
             <div class="article-show-image"><%= image_tag(content.article_image.url, alt: 'ブログ画像', class: "img-fluid") %></div>
           <% end %>
-          <p><%=safe_join(content.body.split("\n"),tag(:br))%></p>
+            <%= content.body.html_safe %>
         <% end %>
       </div>
     </div>
