--- a/app/views/public/articles/show.html.erb
+++ b/app/views/public/articles/show.html.erb
@@ -12,7 +12,7 @@
         <% if content.article_image.present? %>
           <div class="article-show-image"><%= image_tag(content.article_image.url, alt: 'ブログ画像', class: "img-fluid") %></div>
         <% end %>
-        <p><%=safe_join(content.body.split("\n"),tag(:br))%></p>
+          <%= content.body.html_safe %>
       <% end %>
     </div>
   </div>
