--- a/app/views/admins/articles/show.html.erb
+++ b/app/views/admins/articles/show.html.erb
@@ -5,7 +5,7 @@
     <div class="articleHeaderbox">
       <h1><%= @article.title %></h1>
       <ul>
-        <li class="time">カテゴリー / <span class="<%= @article.category %>-category"><%= @article.category_text %></span></li>
+        <li class="Headersub">カテゴリー / <span class="<%= @article.category %>-category"><%= @article.category_text %></span></li>
       </ul>
     </div>
     <div class="mb-4">
