--- a/app/views/admins/news/show.html.erb
+++ b/app/views/admins/news/show.html.erb
@@ -5,7 +5,7 @@
     <div class="newsHeaderbox">
       <h1><%= @news.title %></h1>
       <ul>
-        <li class="time"><%= format_date(@news.calendar_date) %></li>
+        <li class="Headersub"><%= format_date(@news.calendar_date) %></li>
       </ul>
     </div>
     <div class="text-center mb-4">
