update/管理側のトップ画面で、最新の問い合わせや、応募がない際のスタイリングを変更

--- a/app/views/admins/home/show.html.erb
+++ b/app/views/admins/home/show.html.erb
@@ -129,7 +129,7 @@
                           <% end %>
                         <% else %>
                           <tr>
-                            <th scope="row">問い合わせはありません</th>
+                            <th colspan="6 " scope="row" class="text-center">現在問い合わせはありません</th>
                           </tr>
                         <% end %>
                       </tbody>
@@ -188,7 +188,7 @@
                           <% end %>
                         <% else %>
                           <tr>
-                            <th scope="row">採用応募はありません</th>
+                            <th colspan="7", scope="row" class="text-center">現在採用応募はありません</th>
                           </tr>
                         <% end %>
                       </tbody>
