--- a/app/views/admins/shops/_form.html.erb
+++ b/app/views/admins/shops/_form.html.erb
@@ -93,14 +93,14 @@
 <% if f.object.new_record? %>
   <div class="mt-5">
     <ul class="list-inline">
-      <li class="list-inline-item"><%= f.submit "登録完了する", class: 'btn btn-primary' %></li>
+      <li class="list-inline-item"><%= f.submit "登録完了する", class: 'btn btn-primary', data: { turbo: false } %></li>
       <li class="list-inline-item"><%= link_to "店舗一覧に戻る", @shops_index_url, class: 'btn btn-secondary' %></li>
     </ul>
   </div>
 <% else %>
   <div class="mt-5">
     <ul class="list-inline">
-      <li class="list-inline-item"><%= f.submit "編集を完了する", class: 'btn btn-primary' %></li>
+      <li class="list-inline-item"><%= f.submit "編集を完了する", class: 'btn btn-primary', data: { turbo: false } %></li>
       <li class="list-inline-item"><%= link_to "店舗一覧に戻る", @shops_index_url, class: 'btn btn-secondary' %></li>
     </ul>
   </div>
