--- a/app/views/public/shops/index.html.erb
+++ b/app/views/public/shops/index.html.erb
@@ -1,81 +1,83 @@
 <h1 class="h1style mb-5rem fw-bold">店舗一覧</h1>
 <div class="shops-wrap">
   <% @shops.each do |shop| %> 
-    <div class="py-2 d-flex align-items-center">
-      <div class="text-center shop-title fw-bold">
-        <%= shop.name %>
+    <div class="shop-border">
+      <div class="py-2 d-flex align-items-center">
+        <div class="text-center shop-title fw-bold">
+          <%= shop.name %>
+        </div>
+        <button class="btn btn-toggle d-inline-flex align-items-center" data-bs-toggle="collapse" data-bs-target="#shopDetails<%= shop.id %>" aria-expanded="false">
+          <span class="d-none d-sm-inline">詳しく見る</span>
+        </button>
+
       </div>
-      <button class="btn btn-toggle d-inline-flex align-items-center" data-bs-toggle="collapse" data-bs-target="#shopDetails<%= shop.id %>" aria-expanded="false">
-        <span class="d-none d-sm-inline">詳しく見る</span>
-      </button>
+      <div id="shopDetails<%= shop.id %>" class="collapse">
+        <div class="shop-card">
+          <div class="shop-content">
+            <div class="d-flex flex-wrap">
+              <div class="col-md-6 mb-4 p-3 mobile-p-0">
+                <% if shop.shop_image? %>
+                  <%= image_tag shop.shop_image.url, class: "img-fluid" %>
+                <% else %>
+                  <%= image_tag '/assets/default_shop_image.png', alt: '店舗画像', class: "img-fluid" %>
+                <% end %>
+              </div>
+              <div class="col-md-6 mb-4 p-3 mobile-p-0">
+                <dl class="shop-info">
+                  <dt>住所</dt>
+                  <dd>
+                    〒<%= shop.postcode %><br>
+                    <%= shop.prefecture.name %><%= shop.city_name %><%= shop.address %>
+                  </dd>
+                  <dt>営業時間</dt><dd><%=safe_join(shop.business_time.split("\n"),tag(:br))%></dd>
+                  <dt>アクセス</dt><dd><%=safe_join(shop.access.split("\n"),tag(:br))%></dd>
+                  <dt>電話番号</dt><dd class="text-decoration-underline"><%= shop.phone_number %></dd>
+                  <dt>カウンター席数</dt><dd><%= shop.counter_seat %>席</dd>
+                  <dt>テーブル席数</dt><dd><%= shop.table_seat %>席</dd>
+                  <dt>グルメサイト</dt><dd class="text-decoration-underline"><%= link_to shop.site_name, shop.gourmet_site_link, target: "_blank", rel: "noopener noreferrer" %></dd>
+                </dl>
+              </div>
+            </div>
+            <div id="map"></div>
+            <style>
+                #map {
+                height: 500px;
+                }
+            </style>
+            <script>
+              function initMap(){
+                let mapPosition = {lat: <%= shop.latitude || 0 %> , lng: <%= shop.longitude || 0 %> };
+                let map = new google.maps.Map(document.getElementById('map'), {
+                  zoom: 15,
+                  center: mapPosition
+                });
+                let transitLayer = new google.maps.TransitLayer();
+                transitLayer.setMap(map);
 
-    </div>
-    <div id="shopDetails<%= shop.id %>" class="collapse">
-      <div class="shop-card">
-        <div class="shop-content">
-          <div class="d-flex flex-wrap">
-            <div class="col-md-6 mb-4 p-3 mobile-p-0">
-              <% if shop.shop_image? %>
-                <%= image_tag shop.shop_image.url, class: "img-fluid" %>
-              <% else %>
-                <%= image_tag '/assets/default_shop_image.png', alt: '店舗画像', class: "img-fluid" %>
-              <% end %>
-            </div>
-            <div class="col-md-6 mb-4 p-3 mobile-p-0">
-              <dl class="shop-info">
-                <dt>住所</dt>
-                <dd>
-                  〒<%= shop.postcode %><br>
-                  <%= shop.prefecture.name %><%= shop.city_name %><%= shop.address %>
-                </dd>
-                <dt>営業時間</dt><dd><%=safe_join(shop.business_time.split("\n"),tag(:br))%></dd>
-                <dt>アクセス</dt><dd><%=safe_join(shop.access.split("\n"),tag(:br))%></dd>
-                <dt>電話番号</dt><dd class="text-decoration-underline"><%= shop.phone_number %></dd>
-                <dt>カウンター席数</dt><dd><%= shop.counter_seat %>席</dd>
-                <dt>テーブル席数</dt><dd><%= shop.table_seat %>席</dd>
-                <dt>グルメサイト</dt><dd class="text-decoration-underline"><%= link_to shop.site_name, shop.gourmet_site_link, target: "_blank", rel: "noopener noreferrer" %></dd>
-              </dl>
-            </div>
-          </div>
-          <div id="map"></div>
-          <style>
-              #map {
-              height: 500px;
+                let contentString = `
+                  <div>
+                    <h4>${'<%= shop.name %>'}</h4>
+                    <p>〒${'<%= shop.postcode %>'}</p>
+                    <p>住所: ${'<%= shop.prefecture.name %>'}${'<%= shop.city_name %>'}${'<%= shop.address %>'}</p>
+                  </div>
+                `;
+                let infowindow = new google.maps.InfoWindow({
+                  content: contentString
+                });
+
+                let marker = new google.maps.Marker({
+                  position: mapPosition,
+                  map: map,
+                  title: '<%= shop.name %>'
+                });
+                
+                marker.addListener('click', function(){
+                  infowindow.open(map, marker);
+                });
               }
-          </style>
-          <script>
-            function initMap(){
-              let mapPosition = {lat: <%= shop.latitude || 0 %> , lng: <%= shop.longitude || 0 %> };
-              let map = new google.maps.Map(document.getElementById('map'), {
-                zoom: 15,
-                center: mapPosition
-              });
-              let transitLayer = new google.maps.TransitLayer();
-              transitLayer.setMap(map);
-
-              let contentString = `
-                <div>
-                  <h4>${'<%= shop.name %>'}</h4>
-                  <p>〒${'<%= shop.postcode %>'}</p>
-                  <p>住所: ${'<%= shop.prefecture.name %>'}${'<%= shop.city_name %>'}${'<%= shop.address %>'}</p>
-                </div>
-              `;
-              let infowindow = new google.maps.InfoWindow({
-                content: contentString
-              });
-
-              let marker = new google.maps.Marker({
-                position: mapPosition,
-                map: map,
-                title: '<%= shop.name %>'
-              });
-              
-              marker.addListener('click', function(){
-                infowindow.open(map, marker);
-              });
-            }
-          </script>
-          <script src="https://maps.googleapis.com/maps/api/js?key=<%= ENV['MAP_API_KEY'] %>&callback=initMap"async defer></script>
+            </script>
+            <script src="https://maps.googleapis.com/maps/api/js?key=<%= ENV['MAP_API_KEY'] %>&callback=initMap"async defer></script>
+          </div>
         </div>
       </div>
     </div>
