update/shopモデルのgooglemapを登録するカラムを作成し、Maps-Embed-APIを利用して店舗ごとに詳細なgooglemapを表示

--- a/app/views/admins/shops/show.html.erb
+++ b/app/views/admins/shops/show.html.erb
@@ -31,6 +31,8 @@
         </dl>
       </div>
     </div>
+    <iframe width="100%" height="450" style="border:0" Load="lazy" allowfullscreen src="https://www.google.com/maps/embed/v1/place?q=<%= @shop.google_map_iframe %>">
+    </iframe>
 
     <div class="mt-5">
       <% if @is_discarded %>
