--- a/app/views/admins/shops/_form.html.erb
+++ b/app/views/admins/shops/_form.html.erb
@@ -90,17 +90,24 @@
   <span class="text-muted small mt-2">・5MBまでの画像をアップロードできます。</span>
 </div>
 
+<div class="mb-4">
+  <%= f.label :google_map_iframe, class: "form-label" %>
+  <span class="badge rounded-pill text-bg-danger">任意</span>
+  <%= f.text_field :google_map_iframe, class: 'form-control', value: f.object.google_map_iframe, placeholder: "ifameのq=以降を入力" %>
+  <%= show_error_messages(f.object, :google_map_iframe) %>
+</div>
+
 <% if f.object.new_record? %>
   <div class="mt-5">
     <ul class="list-inline">
-      <li class="list-inline-item"><%= f.submit "登録完了する", class: 'btn btn-primary', data: { turbo: false } %></li>
+      <li class="list-inline-item"><%= f.submit "登録完了する", class: 'btn btn-primary' %></li>
       <li class="list-inline-item"><%= link_to "店舗一覧に戻る", @shops_index_url, class: 'btn btn-secondary' %></li>
     </ul>
   </div>
 <% else %>
   <div class="mt-5">
     <ul class="list-inline">
-      <li class="list-inline-item"><%= f.submit "編集を完了する", class: 'btn btn-primary', data: { turbo: false } %></li>
+      <li class="list-inline-item"><%= f.submit "編集を完了する", class: 'btn btn-primary' %></li>
       <li class="list-inline-item"><%= link_to "店舗一覧に戻る", @shops_index_url, class: 'btn btn-secondary' %></li>
     </ul>
   </div>
