--- a/app/views/admins/home/show.html.erb
+++ b/app/views/admins/home/show.html.erb
@@ -55,7 +55,6 @@
       <h5 class="card-header">店舗</h5>
       <div class="card-body">
         <h5 class="card-title">店舗数：<%= @total_contacts %>店舗</h5>
-        <p class="card-text">公開画面へのリンク(仮)</p>
         <% if @latest_shop %>
           <p class="card-text  text-success">最新の店舗名:<br>
             <%= @latest_shop.name %>
@@ -63,6 +62,7 @@
         <% else %>
           <p class="card-text">公開されている店舗はありません</p>
         <% end %>
+        <p class="card-text mt-5"><%= link_to '(店舗)公開画面へのリンク', shops_path, target: "_blank" %></p>
       </div>
       <% if @latest_shop %>
         <div class="m-3">
