--- a/app/views/admins/contacts/index.html.erb
+++ b/app/views/admins/contacts/index.html.erb
@@ -39,8 +39,8 @@
               <span><%= contact.name %></span>
             </div>
           </td>
-          <td class="align-middle <%= contact.callback_requested ? 'text-success' : 'text-danger' %>">
-            <%= contact.callback_requested ? '希望' : '不要' %>
+          <td class="align-middle <%= contact.need? ? 'text-success' : 'text-danger' %>">
+            <%= contact.callback_requested_text %>
           </td>
           <td class="align-middle"><%= contact.contact_method_text %></td>
           <td class="align-middle"><%= contact.status_text %></td>
