update/管理側の問い合わせ一覧画面と採用応募一覧画面で未対応の際は赤色で、それ以外の際は緑で表示されるように変更

--- a/app/views/admins/contacts/index.html.erb
+++ b/app/views/admins/contacts/index.html.erb
@@ -43,7 +43,9 @@
             <%= contact.callback_requested_text %>
           </td>
           <td class="align-middle"><%= contact.contact_method_text %></td>
-          <td class="align-middle"><%= contact.status_text %></td>
+          <td class="align-middle <%= contact.not_started? ? 'text-danger' : 'text-success' %>">
+            <%= contact.status_text %>
+          </td>
           <td class="align-middle"><%= contact.admin ? contact.admin.name : '未指定' %></td>
           <td class="align-middle"><%= format_datetime(contact.updated_at) %>
         </tr>
