add/公開側のレスポンシブな問い合わせフォームの作成とcontrollerでnewメソッド、createメソッドを作成

--- a/app/frontend/entrypoints/public.scss
+++ b/app/frontend/entrypoints/public.scss
@@ -632,39 +632,6 @@ a:hover {
 }
 
 /*--------------------------------------------------------------
-# Sections General
---------------------------------------------------------------*/
-section {
-  padding: 60px 0;
-  overflow: hidden;
-}
-
-.section-bg {
-  background-color: #f6f3f2;
-}
-
-.section-title {
-  padding-bottom: 30px;
-  text-align: center;
-}
-
-.section-title h2 {
-  font-size: 28px;
-  font-weight: 300;
-  margin-bottom: 20px;
-  padding-bottom: 0;
-  color: #65534c;
-}
-
-.section-title h2 strong {
-  font-weight: 700;
-}
-
-.section-title p {
-  margin-bottom: 0;
-}
-
-/*--------------------------------------------------------------
 # Breadcrumbs
 --------------------------------------------------------------*/
 .breadcrumbs {
@@ -720,61 +687,7 @@ section {
 /*--------------------------------------------------------------
 # Cta
 --------------------------------------------------------------*/
-.cta {
-  background: #f3f1f0;
-  padding: 60px 0;
-  color: #574741;
-}
 
-.cta h3 {
-  font-size: 28px;
-  font-weight: 700;
-}
-
-.cta h3 span {
-  color: #f03c02;
-}
-
-.cta p {
-  padding: 0;
-  margin: 0;
-}
-
-.cta .cta-btn {
-  font-family: "Poppins", sans-serif;
-  text-transform: uppercase;
-  font-weight: 500;
-  font-size: 14px;
-  letter-spacing: 1px;
-  display: inline-block;
-  padding: 10px 25px;
-  border-radius: 2px;
-  transition: 0.4s;
-  margin: 10px;
-  border-radius: 4px;
-  border: 2px solid #f03c02;
-  color: #f03c02;
-  background: #fff;
-}
-
-.cta .cta-btn:hover {
-  background: #f03c02;
-  color: #fff;
-}
-
-@media (max-width: 1024px) {
-  .cta {
-    background-attachment: scroll;
-  }
-}
-
-@media (min-width: 769px) {
-  .cta .cta-btn-container {
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
-  }
-}
 
 /*--------------------------------------------------------------
 # News
@@ -1042,35 +955,118 @@ section {
 }
 
 /*--------------------------------------------------------------
-# Clients
+# Contacts
 --------------------------------------------------------------*/
-.clients .clients-wrap {
-  border-top: 1px solid #f1eeed;
-  border-left: 1px solid #f1eeed;
+@media (max-width: 576px){
+  .contact-content {
+    font-size: 14px;
+  }
 }
 
-.clients .client-logo {
-  padding: 20px;
+.contact-title {
+  margin-bottom: 3rem;
+  margin-top: 3rem;
+}
+
+.contact-title2 {
+  margin-bottom: 1rem;
+  margin-top: 3rem;
+}
+
+.contact-subtitle {
+  margin-bottom: 3rem;
+}
+
+@media (max-width: 576px){
+  .contact-title {
+    margin-bottom: 1.5rem;
+    margin-top: 1.5rem;
+  }
+}
+
+@media (max-width: 576px){
+  .contact-title2 {
+    margin-bottom: 0.5rem;
+    margin-top: 1.5rem;
+  }
+}
+
+@media (max-width: 576px){
+  .contact-subtitle {
+    margin-bottom: 1.5rem;
+  }
+}
+
+.contact-table {
+  height: 0;
+}
+
+.contact-table th {
+  font-weight: bold;
+  height: 100%;
+  padding: 1.125em 0;
+}
+
+@media (max-width: 576px){
+  .contact-table th {
+    display: block;
+    padding: 0.86em 0;
+  }
+}
+
+.contact-table td {
+  padding: 1.29em 0 1.29em 2.14em;
+}
+
+@media (max-width: 576px){
+  .contact-table td {
+    display: block;
+    padding: 0 0 0.86em;
+  }
+}
+
+.contact-label {
+  background-color: #e8e8e8;
+  height: 100%;
+  padding: 1.125em 6.37em 1em 1.56em;
+}
+
+@media (max-width: 576px){
+  .contact-label {
+    padding: 12px 60px 12px 10px 
+  }
+}
+
+.contact-form {
   display: flex;
-  justify-content: center;
+  flex-wrap: wrap;
   align-items: center;
-  border-right: 1px solid #f1eeed;
-  border-bottom: 1px solid #f1eeed;
-  overflow: hidden;
-  background: #fff;
-  height: 100px;
+  height: 100%;
 }
 
-.clients .client-logo img {
-  transition: all 0.3s ease-in-out;
-  height: 36px;
-  filter: grayscale(100%);
+@media (max-width: 576px){
+  .contact-form {
+    display: block;
+  }
 }
 
-.clients .client-logo:hover img {
-  filter: none;
-  transform: scale(1.1);
+.contact-as-radio {
+  margin: 10px 40px 0 0;
 }
+
+.contact-btn-box {
+  text-align: center;
+  background-color: #e8e8e8;
+  margin: 24px 0 0;
+  padding: 1.25em 0.625em 1.375em;
+}
+
+@media (min-width: 576px){
+  .contact-btn-box .btn {
+    width: 400px;
+  }
+}
+
 
 /*--------------------------------------------------------------
 # About Us
