update/Application.tsxを管理用なのでAdminApplication.tsxに変更

--- a/app/views/layouts/admins.html.erb
+++ b/app/views/layouts/admins.html.erb
@@ -23,7 +23,7 @@
   </head>
 
   <% if admin_signed_in? %>
-    <%= vite_javascript_tag 'Application.tsx' %>
+    <%= vite_javascript_tag 'AdminApplication.tsx' %>
     <app-component data-props="<%= { currentAdmin: current_admin.data_props }.to_json %>">
       <div class="container mobile-gutter mobile-p-3">
         <nav aria-label="breadcrumb">
