add/公開側のPublicApplication.tsxを作成し、rewrapでcomponentをrails側で利用できるように変更

--- a/app/views/layouts/public.html.erb
+++ b/app/views/layouts/public.html.erb
@@ -25,9 +25,10 @@
   <body>
     <%= render 'public/shared/header' %>
     <div class="contents">
-      <main>
+      <%= vite_javascript_tag 'PublicApplication.tsx' %>
+      <app-component>
         <%= yield %>
-      </main>
+      </app-component>
     </div>
   </body>
 </html>
