--- a/app/frontend/entrypoints/public.scss
+++ b/app/frontend/entrypoints/public.scss
@@ -11,6 +11,7 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, Roboto, "Segoe UI", Meiryo, YuGothic, "Yu Gothic Medium", "Yu Gothic", 'Hiragino Kaku Gothic ProN', 'ヒラギノ角ゴ ProN', sans-serif;
   line-height: 1.625;
   color: #000;
+  background-image: url('/assets/background_image.jpg');
 }
 
 a {
@@ -1070,15 +1071,8 @@ a:hover {
 /*--------------------------------------------------------------
 # JobEntry
 --------------------------------------------------------------*/
-
 .wrap-mission {
-  line-height: 1.5;
-}
-
-@media (max-width: 576px){
-  .job-entry-content {
-    font-size: 14px;
-  }
+  line-height: 2;
 }
 
 @media (max-width: 576px){
