--- a/app/views/public/job_entries/show.html.erb
+++ b/app/views/public/job_entries/show.html.erb
@@ -36,3 +36,7 @@
 <div>
   <%= link_to "応募はこちら", recruitment_info_job_entries_path,  class: "entry_btn fw-bold" %>
 </div>
+
+<div>
+  <%= link_to "よくある質問はこちら", faq_job_entries_path,  class: "faq_btn fw-bold" %>
+</div>
