update/管理側のトップページで誤って、店舗数を表示する変数で問い合わせ数を表示してしまっていたため変更

--- a/app/views/admins/home/show.html.erb
+++ b/app/views/admins/home/show.html.erb
@@ -52,7 +52,7 @@
     <div class="card h-100">
       <h5 class="card-header">店舗</h5>
       <div class="card-body">
-        <h5 class="card-title">店舗数：<%= @total_contacts %>店舗</h5>
+        <h5 class="card-title">店舗数：<%= @total_shops %>店舗</h5>
         <% if @latest_shop %>
           <p class="card-text  text-success">最新の店舗名:<br>
             <%= @latest_shop.name %>
