--- a/app/frontend/entrypoints/public.scss
+++ b/app/frontend/entrypoints/public.scss
@@ -9,6 +9,11 @@ h1, h2, h3, h4, h5, h6, p, blockquote, pre, abbr, address, cite, code, del, dfn,
 
 .footer {
   background-color: white;
+  margin-top: 300px;
+}
+
+html, body {
+  height: 100%;
 }
 
 body {
@@ -16,6 +21,9 @@ body {
   line-height: 1.625;
   color: #000;
   background-image: url('/assets/background_image.jpg');
+  margin: 0;
+  padding: 0;
+  height: 100%;
 }
 
 a {
@@ -148,7 +156,7 @@ a:hover {
 .h1style {
   position: relative;
   height: 132px;
-  margin-bottom: 106px;
+  margin-bottom: 60px;
   padding-top: 58px;
   font-size: 2.125rem;
   text-align: center;
@@ -169,7 +177,7 @@ a:hover {
 @media screen and (max-width: 576px){
   .h1style {
     height: 80px;
-    margin-bottom: 40px;
+    margin-bottom: 30px;
     padding-top: 30px;
     background-size: 95% auto;
     background-position: center center;
