--- a/app/views/public/shared/_header.html.erb
+++ b/app/views/public/shared/_header.html.erb
@@ -10,7 +10,7 @@
     <div class="header-linklist collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ms-auto">
         <li class="nav-item active ms-5">
-          <%= link_to " 会社情報", companies_path, class: "nav-link fw-bold #{'active' if controller_name == 'campanies' && ['show'].include?(action_name)}" %>
+          <%= link_to " 会社情報", companies_path, class: "nav-link fw-bold #{'active' if controller_name == 'companies' && ['show'].include?(action_name)}" %>
         </li>
         <li class="nav-item ms-5">
           <%= link_to "店舗情報", shops_path, class: "nav-link fw-bold #{'active' if controller_name == 'shops' && ['index'].include?(action_name)}" %>
